--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,7 @@
         "branch-alias": {
             "dev-main": "1.0-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
